--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -2,10 +2,10 @@
 
 img         { float:right; visibility:hidden; margin:10px 10px 0 0; }
 
-#country       { text-align:center; }
+#country       { text-align:center; position:relative; margin-top:20px; }
 #container  { width:320px; height:480px; background-color:orange; position:relative; }
-#options    { margin-top:100px; width:100%; }
-#options button   { display:block; margin:0 auto; }
+#options    { margin-top:30px; width:100%; }
+#options button   { display:block; margin:5px auto; height:40px; width:200px; border-radius:5px; }
 #score           { display:inline; float:right; margin-left:10px; position:absolute; bottom:10px; font-size:18px; }
-#newGame    { margin:10px 0 0 10px; background-color:yellow; }
+#newGame    {  height:100px; width:100px; border-radius:5px; position:relative; top:190px; left:110px; background-color:yellow; }
 
