--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -2,9 +2,11 @@
 
 img         { float:right; visibility:hidden; margin:10px 10px 0 0; }
 
-#container  { width:320px; height:480px; background-color:orange; }
-#options    { margin-top:100px; width:100%; }
-#options button   { display:block; margin:0 auto; }
-#score           { display:inline; float:right; margin-left:10px; visibility:hidden; font-size:18px; position:absolute; bottom:10px;}
-#newGame    { margin:10px 0 0 10px; background-color:yellow; }
+#country       { text-align:center; width:200px; position:relative; margin:10px 0 0 60px; font-size:30px; color:white; }
+#container  { width:320px; height:480px; background-color:green; position:relative; }
+#options    { margin-top:30px; width:100%; }
+#options button   { display:block; margin:10px auto; height:60px; width:200px; border-radius:5px; background-color:blue; color:white; font-size:20px; }
+#score           { display:inline; float:right; margin-left:10px; position:absolute; bottom:10px; font-size:18px; color:white; }
+#newGame    {  height:100px; width:100px; border-radius:5px; position:relative; top:190px; left:110px; background-color:yellow; }
 
+/*media queries*/
