--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -7,7 +7,7 @@
 #container  { width:750px; height:1334px; background-color:green; position:relative; }
 
 /*In game section*/
-img             { width:110px; height:110px; float:right; visibility:hidden; margin:10px 10px 0 0; }
+img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
 
 #options        { margin-top:60px; width:100%; }
 #options button { display:block; margin:30px auto; height:150px; width:420px; border-radius:5px; background-color:blue; color:white; font-size:40px; }
