--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -9,11 +9,11 @@
 /*In game section*/
 img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
 
-#options        { margin-top:60px; width:100%; }
+#options        { margin-top:50px; width:100%; }
 #options button { display:block; margin:30px auto; height:150px; width:420px; border-radius:5px; background-color:blue; color:white; font-size:40px; }
-#score          { display:inline; float:right; margin-left:10px; position:absolute; bottom:10px; font-size:36px; color:white; }
-#country        { text-align:center; width:420px; position:relative; margin:20px 0 0 165px; font-size:60px; color:white; }
-
+#score          { left:10px; display:inline; position:absolute; bottom:10px; color:white; font-size:36px; }
+#country        { text-align:center; width:420px; position:relative; margin-left:165px; font-size:60px; color:white; }
+#hint           { height:43px; width:300px; font-size:36px; color:white; background-color:#3C3; border-radius:5px; position:absolute; bottom:10px; right:10px; visibility:hidden; }
 
 /*iPhone 5*/
 @media screen and (max-width:640px) {
@@ -24,8 +24,8 @@ img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
     /*In game section*/
     img             { width:100px; height:100px; }
 
-    #options        { margin-top:40px; }
-    #options button { margin:20px auto; height:120px; width:400px; }
+    #options        { margin-top:30px; }
+    #options button { margin:20px auto; height:100px; width:400px; }
     #country        { width:400px; margin:20px 0 0 120px; }
 }
 
@@ -37,7 +37,7 @@ img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
     #container  { height:960px; }
 
     /*In game section*/
-    #options        { margin-top:30px; }
+    #options        { margin-top:20px; }
     #country        { margin:10px 0 0 120px; }
 }
 
@@ -51,8 +51,9 @@ img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
     /*In game section*/
     img             { width:50px; height:50px; }
 
-    #options        { margin-top:15px; width:100%; }
-    #options button { height:60px; width:200px; font-size:20px; margin:10px auto; }
+    #options        { margin-top:10px; width:100%; }
+    #options button { height:50px; width:200px; font-size:20px; margin:10px auto; }
+    #country        { width:200px; margin:0 0 0 60px; font-size:30px; }
+    #hint           { height:24px; width:150px; font-size:18px; }
     #score          { font-size:18px; }
-    #country        { width:200px; margin:10px 0 0 60px; font-size:30px; }
 }
