--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -14,6 +14,7 @@ img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
 #score          { left:10px; display:inline; position:absolute; bottom:10px; color:white; font-size:36px; }
 #country        { text-align:center; width:420px; position:relative; margin-left:165px; font-size:60px; color:white; }
 #hint           { height:43px; width:300px; font-size:36px; color:white; background-color:#3C3; border-radius:5px; position:absolute; bottom:10px; right:10px; visibility:hidden; }
+#response       { text-align:center; color:white; font-size:36px; }
 
 /*iPhone 5*/
 @media screen and (max-width:640px) {
