--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -14,7 +14,7 @@ img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
 #score          { left:10px; display:inline; position:absolute; bottom:10px; color:white; font-size:36px; }
 #country        { text-align:center; width:420px; position:relative; margin-left:165px; font-size:60px; color:white; }
 #hint           { height:43px; width:300px; font-size:36px; color:white; background-color:#3C3; border-radius:5px; position:absolute; bottom:10px; right:10px; visibility:hidden; }
-#response       { text-align:center; color:white; font-size:36px; }
+#response       { text-align:center; color:white; font-size:66px; }
 
 /*iPhone 5*/
 @media screen and (max-width:640px) {
@@ -57,4 +57,5 @@ img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
     #country        { width:200px; margin:0 0 0 60px; font-size:30px; }
     #hint           { height:24px; width:150px; font-size:18px; }
     #score          { font-size:18px; }
+    #response       { font-size:36px; }
 }
