--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -1,61 +1,15 @@
-﻿/*iPhone 6*/
-
+﻿html { height:100%; }
+body { height:100%; width:100%; }
 /*General*/
 *           { margin:0; padding:0; }
 
-#newGame    { height:224px; width:224px; border-radius:5px; position:relative; top:555px; left:263px; background-color:blue; color:white; font-size:40px; }
-#container  { width:750px; height:1334px; background-color:green; position:relative; }
+#newGame    { height:25%; width:50%; border-radius:5px; position:absolute; top:37.5%; left:25%; background-color:blue; color:white; font-size:40px; }
+#container  { width:100%; height:100%; background-color:green; }
 
 /*In game section*/
-img             { float:right; visibility:hidden; margin:10px 10px 0 0; }
-
-#options        { margin-top:50px; width:100%; }
-#options button { display:block; margin:30px auto; height:150px; width:420px; border-radius:5px; background-color:blue; color:white; font-size:40px; }
-#score          { left:10px; display:inline; position:absolute; bottom:10px; color:white; font-size:36px; }
-#country        { text-align:center; width:420px; position:relative; margin-left:165px; font-size:60px; color:white; }
-#hint           { height:43px; width:300px; font-size:36px; color:white; background-color:#3C3; border-radius:5px; position:absolute; bottom:10px; right:10px; visibility:hidden; }
-#response       { text-align:center; color:white; font-size:66px; }
-
-/*iPhone 5*/
-@media screen and (max-width:640px) {
-    /*General*/
-    #newGame    { height:200px; width:200px; top:468px; left:220px; }
-    #container  { width:640px; height:1136px; }
-
-    /*In game section*/
-    img             { width:100px; height:100px; }
-
-    #options        { margin-top:30px; }
-    #options button { margin:20px auto; height:100px; width:400px; }
-    #country        { width:400px; margin:20px 0 0 120px; }
-}
-
-
-/*iPhone 4*/
-@media screen and (max-height:960px) {
-    /*General*/
-    #newGame    { top:380px;}
-    #container  { height:960px; }
-
-    /*In game section*/
-    #options        { margin-top:20px; }
-    #country        { margin:10px 0 0 120px; }
-}
-
-
-/*iPhone 3*/
-@media screen and (max-width:320px) {
-    /*General*/
-    #newGame    { height:100px; width:100px; top:190px; left:110px; font-size:20px; }
-    #container  { width:320px; height:480px;  }
-
-    /*In game section*/
-    img             { width:50px; height:50px; }
-
-    #options        { margin-top:10px; width:100%; }
-    #options button { height:50px; width:200px; font-size:20px; margin:10px auto; }
-    #country        { width:200px; margin:0 0 0 60px; font-size:30px; }
-    #hint           { height:24px; width:150px; font-size:18px; }
-    #score          { font-size:18px; }
-    #response       { font-size:36px; }
-}
+.heart		{ float:right; visibility:hidden; height:8%; width:15%; margin:1%; }
+.choice		{ display:block; margin: 10% auto; width:80%; border-radius:5px; background-color:blue; color:white; font-size:35px; }
+#score    { left:10px; display:inline; position:absolute; bottom:10px; color:white; font-size:24px; }
+#country  { clear:both; text-align:center; width:100%; position:relative; font-size:45px; color:white; padding-top:5%; }
+#hint     { width:50%; font-size:25px; color:white; background-color:#3C3; border-radius:5px; position:absolute; bottom:10px; right:10px; visibility:hidden; }
+#response { text-align:center; color:white; font-size:66px; }
