--- a/geoQuiz/style.css
+++ b/geoQuiz/style.css
@@ -1,15 +1,23 @@
 ﻿html { height:100%; }
 body { height:100%; width:100%; }
 /*General*/
-*           { margin:0; padding:0; }
+*         { margin:0; padding:0; text-align:center; }
 
-#newGame    { height:25%; width:50%; border-radius:5px; position:absolute; top:37.5%; left:25%; background-color:blue; color:white; font-size:40px; }
-#container  { width:100%; height:100%; background-color:green; }
+#newGame  { height:25%; top:37.5%; }
+.view			{ width:100%; height:100%; background-color:green; }
+.bigBlue	{ width:50%; border-radius:5px; position:absolute; left:25%; background-color:blue; color:white; font-size:40px;}
+.text			{ clear:both; width:100%; position:relative; font-size:45px; color:white; padding-top:5%; }
 
 /*In game section*/
-.heart		{ float:right; visibility:hidden; height:8%; width:15%; margin:1%; }
+.heart		{ float:right; display:none; height:8%; width:15%; margin:1%; }
 .choice		{ display:block; margin: 10% auto; width:80%; border-radius:5px; background-color:blue; color:white; font-size:35px; }
 #score    { left:10px; display:inline; position:absolute; bottom:10px; color:white; font-size:24px; }
-#country  { clear:both; text-align:center; width:100%; position:relative; font-size:45px; color:white; padding-top:5%; }
-#hint     { width:50%; font-size:25px; color:white; background-color:#3C3; border-radius:5px; position:absolute; bottom:10px; right:10px; visibility:hidden; }
-#response { text-align:center; color:white; font-size:66px; }
+#hint     { width:50%; font-size:25px; color:white; background-color:#3C3; border-radius:5px; position:absolute; bottom:10px; right:10px; display:none; }
+#response { color:white; font-size:66px; }
+
+/*end game view*/
+#endGame			{ display:none; }
+#home					{ bottom:5%; }
+#submitScore	{ height:26%; bottom:30%; }
+.name					{ outline:none; width: 75%; background-color: green; color: white; border: 1px solid #3c3; padding: 5px; position: absolute; left: 12.5%; bottom: 60%; font-size: 16px; }
+.name:focus		{ border: 5px solid #3c3; left:calc(12.5% - 4px); }
